--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,10 @@ http {
     server {
         listen 8080;
         location /api/v0/feed {
-            proxy_pass http://udagram-api-feed-svc:8080/api/v0/feed/;
+            proxy_pass http://a00e028b5776e42d9b95da65a135c52c-1118173301.us-east-1.elb.amazonaws.com:8080/api/v0/feed/;
         }
         location /api/v0/users {
-            proxy_pass http://udagram-api-users-svc:8080/api/v0/users/;
+            proxy_pass http://a25f856b412ff4ace81b1039cc880965-208244182.us-east-1.elb.amazonaws.com:8080/api/v0/users/;
         }
     }
 }
